updated index to reflect filename change

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
         Galavantier</a>. <br/>
         My hobbies include climbing, backpacking, and amateur astronomy.</div>
     </section>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
