--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="about">
       <div id="paragraph">I'm a Las Vegas based developer, currently working at <a href="https://www.galavantier.com">
         Galavantier</a>. <br/>
-        My hobbies include climbing, backpacking, and amateur astronomy.</div>
+        My hobbies include climbing, backpacking, and stargazing.</div>
     </section>
     <script src="script.js"></script>
   </body>
