--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="modal" id="modal">
       <div class="modal-row">
-        <div><a href="javascript:void(0)">About</a></div>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="about.html">About</a></div>
         <div><a href="javascript:void(0)">Blog</a></div>
         <div><a href="javascript:void(0)">Adventures</a></div>
         <div><a href="javascript:void(0)">Projects</a></div>
@@ -17,9 +18,9 @@
       </div>
      <a href="javascript:void(0)" class="menu-close" id="menu-close">Close</a>
     </div>
-    <div id="splash">
+    <div class="lato" id="splash">
       <h1>Miles McDaniel</h1>
-      <h1 id="title">Software Developer</h1>
+      <h1 class="sub-text" id="title">Software Developer</h1>
     </div>
     <div class="menu">
       <a href="javascript:void(0)" id="menu-open">Menu</a>
