--- a/projects.html
+++ b/projects.html
@@ -44,21 +44,8 @@
   <a href="recommendations.html">recommendations</a>
   <a href="https://iammiles.svbtle.com/">writing</a>
 </nav>
-<div class="main-content">
-  <div class="about-image"><img src="images/oakshire_beer.jpg" /></div>
-  <div class="main-text">
-    <p>Hello!</p>
-    <p>
-      My name is <i>Miles McDaniel</i>. I make software for a living. I enjoy
-      being outside, tending to my bonsai plants, and occasionally stargazing
-      with my Orion SkyQuest XT6.
-    </p>
-    <p>
-      I'm not so active on social media. Please send me a message through
-      <a href="mailto:iammiles@protonmail.com">email</a> instead.
-    </p>
-  </div>
-</div>
+<h2>To be completed...</h2>
+<p>For now, check out my <a href="https://github.com/iammiles">github</a>.</p>
   <script src="script.js"></script>
   </body>
 </html>
