--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <p>Hello!</p>
     <p>
       My name is <i>Miles McDaniel</i>. I make software for a living. I enjoy
-      being outside, tending to my bonsai plants, and occasionally stargazing
-      with my Orion SkyQuest XT6.
+      being outside, boardgames, tending to my bonsai plants, and occasionally
+      stargazing with my Orion SkyQuest XT6.
     </p>
     <p>
       I'm not so active on social media. Please send me a message through
